# gamma

./: CMakeLists.txt  README.md  tests.cpp
gamma/: fixed_point.hpp  integer.hpp  line.hpp  math.hpp  matrix.hpp  mvp.hpp  sphere.hpp  stream.hpp  transform.hpp  vector.hpp
gamma/transform/: axial_rotation.hpp  lookat.hpp  orientation.hpp  orthogonal.hpp  perspective.hpp  translation.hpp  x_rotation.hpp  y_rotation.hpp  z_rotation.hpp
source/: stream.hpp  vector.hpp
tests/: matrix.cpp  sizes.cpp  vector.cpp
